Set up screen locker - slock, added key bind; Added `home` config sync in syncfiles.py

--- a/home/sergey/.xbindkeysrc
+++ b/home/sergey/.xbindkeysrc
@@ -67,6 +67,9 @@
 "amixer set Master toggle"
    XF86AudioMute
 
+"slock"
+   Shift + Escape
+
 ##################################
 # End of xbindkeys configuration #
 ##################################
